# emultendo

./: .gitignore  Cargo.toml  README.md  TODO.md
.github/workflows/: build.yml
core/: Cargo.toml
core/src/: bus.rs  bus_tests.rs  cartridge.rs  cartridge_tests.rs  controller.rs  controller_tests.rs  lib.rs  memory.rs  nes.rs  nes_tests.rs
core/src/bus/: cpu_bus.rs  cpu_bus_tests.rs  mod.rs  ppu_bus.rs  ppu_bus_tests.rs
core/src/cpu/: instruction.rs  instruction_tests.rs  interrupt.rs  memory.rs  mod.rs  mod_tests.rs  opcode.rs  trace.rs  trace_tests.rs  unofficial_instruction.rs  unofficial_instruction_tests.rs
core/src/nes/: mod.rs  mod_tests.rs  tools.rs
core/src/ppu/: addr_register.rs  addr_register_tests.rs  control_register.rs  control_register_tests.rs  frame.rs  mask_register.rs  mod.rs  palette.rs  rect.rs  render.rs  scroll_register.rs  scroll_register_tests.rs  status_register.rs  status_register_tests.rs
core/src/renderer/: frame.rs  mod.rs  palette.rs
debugger/: Cargo.toml
debugger/src/: cpu_window.rs  display_window.rs  emulator.rs  main.rs  renderable.rs  widget.rs
debugger/src/emulator/: mod.rs  state.rs
debugger/src/support/: mod.rs
debugger/src/ui/: cartridge.rs  control.rs  control_window.rs  cpu.rs  cpu_window.rs  display.rs  mod.rs
debugger/src/window/: cartridge.rs  control.rs  cpu.rs  display.rs  mod.rs  ppu.rs
standalone/: Cargo.toml
standalone/src/: main.rs  snake.rs  util.rs
