[package]
name = "emultendo-standalone"
version = "0.1.0"
edition = "2021"
default-run = "emultendo"

[[bin]]
name = "emultendo"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emultendo-core = { path = "../core" }
sdl2 = "0.35.2"
rand = "0.8.5"
image = "0.24.5"
